--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 async-generator==1.10
 attrs==22.1.0
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
 black==22.6.0
 certifi==2022.6.15
@@ -35,6 +36,7 @@ pluggy==1.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 py==1.11.0
+pycodestyle==2.9.1
 pycparser==2.21
 pyee==8.1.0
 Pygments==2.12.0
@@ -57,6 +59,7 @@ sniffio==1.2.0
 sortedcontainers==2.4.0
 sqlparse==0.4.2
 text-unidecode==1.3
+toml==0.10.2
 tomli==2.0.1
 tqdm==4.64.0
 trio==0.21.0
